# rust-web-scraping-with-selenium

./: Cargo.toml
src/: main.rs
