[package]
name = "rust-web-scraping-with-selenium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
thirtyfour = "0.31.0"
tokio = { version = "1.33.0", features = ["rt", "rt-multi-thread", "macros"] }
